<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main_menu.MainMenuFragment">

    <android.widget.Toolbar
        android:id="@+id/main_menu_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/shadow"
        android:elevation="18dp"
        android:title="@string/common_app_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/your_cars_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:fontFamily="@font/google_sans_regular"
        android:text="@string/main_menu_your_cars"
        android:textColor="@color/text_main"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/main_menu_toolbar"
        app:layout_constraintTop_toBottomOf="@id/main_menu_toolbar" />

    <TextView
        android:id="@+id/view_all_saved_cars_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:fontFamily="@font/google_sans_regular"
        android:text="@string/main_menu_view_all_saved_cars"
        android:textColor="@color/accent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@+id/main_menu_toolbar"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/saved_cars_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/your_cars_text" />


    <TextView
        android:id="@+id/search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:fontFamily="@font/google_sans_regular"
        android:text="@string/main_menu_search_title"
        android:textColor="@color/text_main"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/saved_cars_recycler"
        app:layout_constraintTop_toTopOf="@id/saved_cars_recycler" />

    <TextView
        android:id="@+id/history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:fontFamily="@font/google_sans_regular"
        android:text="@string/main_menu_search_history_title"
        android:textColor="@color/accent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@id/saved_cars_recycler"
        app:layout_constraintTop_toTopOf="@id/saved_cars_recycler" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/manufacturer_search_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_text" />


</androidx.constraintlayout.widget.ConstraintLayout>